--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
      <button id="saludar">Saludar</button>
+     <button onclick="mostrarAlerta()">Haz clic</button>
+
+     <script>
+        function mostrarAlerta() {
+            alert("Hola!");
+        }
+        </script>
 </body>
 </html>
