--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>taller-eventos</title>
 </head>
 <body>
-     <button id="saludar">Saludar</button>
-     <button onclick="mostrarAlerta()">Haz clic</button>
+     
+     <button onclick="mostrarAlerta()">Saludar</button>
 
      <script>
         function mostrarAlerta() {
