--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>taller-eventos</title>
+    <script src="eventos.js"></script>
 </head>
-<body>
-     
-     <button onclick="mostrarAlerta()">Saludar</button>
+<body>  
+     <button id="saludar" onclick="mostrarAlerta()">Saludar</button>
 
      <script>
         function mostrarAlerta() {
             alert("Hola!");
         }
         </script>
+
+     <div id="saludar">
+     
+  </div>
+
+  
 </body>
 </html>
