--- a/index.html
+++ b/index.html
@@ -7,18 +7,8 @@
     <script src="eventos.js"></script>
 </head>
 <body>  
-     <button id="saludar" onclick="mostrarAlerta()">Saludar</button>
-
-     <script>
-        function mostrarAlerta() {
-            alert("Hola!");
-        }
-        </script>
-
-     <div id="saludar">
-     
-  </div>
-
-  
+     <div class="div-contenedor" style="padding: 5px; background-color: green;">
+        <button onclick="mostrarAlerta()">Saludar</button>
+      </div>
 </body>
 </html>
